--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -28,55 +28,76 @@
                 <div class="grid-item a">
                     <div class="post-title mb-10">
                         <h3>This is another headline</h3>
-                        <span class="author-info">
-                            <a href="https://google.ca" class="link-sm">Yonglin Wang</a> <p>Effective: July 29th 2017</p>
-                        </span>
+                        <p class="author-info">
+                            <a href="https://google.ca" class="link-sm">Yonglin Wang</a>
+                        </p>
                     </div>
-                    <div>Lorem ipsum dolor sit amet, <a href="https://google.ca">consectetur adipisicing elit.</a> Ab aliquam atque eveniet facere
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
                         itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
                         soluta sunt, unde voluptatum.
-                    </div>
-                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
-                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
-                        tenetur veniam veritatis.
-                    </div>
+                    </p>
+                    <span class="grid-item-footer">Effective: July 29th 2017</span>
                 </div>
                 <div class="grid-item b">
-                    <h3>Test B</h3>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                    <div class="post-title mb-10">
+                        <h3>This is another headline</h3>
+                        <p class="author-info">
+                            <a href="https://google.ca" class="link-sm">Yonglin Wang</a>
+                        </p>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
                         itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
                         soluta sunt, unde voluptatum.
-                    </div>
-                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
-                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
-                        tenetur veniam veritatis.
-                    </div>                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
-                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
-                        soluta sunt, unde voluptatum.
-                    </div>
-                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
-                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
-                        tenetur veniam veritatis.
-                    </div>
+                    </p>
+                    <span class="grid-item-footer">Effective: July 29th 2017</span>
                 </div>
                 <div class="grid-item b">
-                    <h3>Test B</h3>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                    <div class="post-title mb-10">
+                        <h3>This is another headline</h3>
+                        <p class="author-info">
+                            <a href="https://google.ca" class="link-sm">Yonglin Wang</a>
+                        </p>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
                         itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
                         soluta sunt, unde voluptatum.
-                    </div>
-                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
-                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
-                        tenetur veniam veritatis.
+                    </p>
+                    <span class="grid-item-footer">Effective: July 29th 2017</span>
+                </div>
+                <div class="grid-item image text-over-image" style="background: url('/img/test.jpg')">
+                    <div class="overlay-partial">
+                        <div class="post-title mb-10">
+                            <h3>This is another headline</h3>
+                            <p class="author-info">
+                                <a href="https://google.ca" class="link-sm">Yonglin Wang</a>
+                            </p>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                            itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                            soluta sunt, unde voluptatum.
+                        </p>
+                        <span class="grid-item-footer">Effective: July 29th 2017</span>
                     </div>
                 </div>
                 <div class="grid-item image">
-                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
-                </div><div class="grid-item image">
                     <img class="img-responsive" src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/18893090_1129639927142253_8618964973264668114_n.jpg?oh=0b39f3bb2b98b6feef6a3ac3f70e8925&oe=59EE81D9" />
-                </div><div class="grid-item image">
-                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
-                </div><div class="grid-item image">
+
+                </div>
+                <div class="grid-item image blog-item">
+                    <img class="img-responsive" src="img/test.jpg" />
+                    <div class="grid-blog-body">
+                        <h3>This is a blog title</h3>
+                        <p class="author-info">
+                            <a href="https://google.ca" class="link-sm">Yonglin Wang</a>
+                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore ea id iure neque omnis quaerat sequi, tenetur! Assumenda consectetur cumque dolore error, ex facere illum modi possimus quia similique.</p>
+                    </div>
+                </div>
+                <div class="grid-item image">
                     <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
                 </div><div class="grid-item image">
                     <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
