Minor stream academics update
>Changed blog date picker to single day
>Added text rotation to navigation (Needs optimization)
>Added navigation tabs to course page
>Added new hovering credits to stream images
>Removed unnessesary css

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -34,9 +34,12 @@
             </div>
         </div>
         <div class="container">
-            <div class="row mtb-30">
-                <div class="col-md-12 text-center">
-                    <h2>Assessments</h2>
+            <div class="row mt-30">
+                <div class="col-md-12 text-center assessment-tabs">
+                    <div class="button-group filter-button-group mb-30">
+                        <button class="filter-btn is-checked">Assessments</button>
+                        <button class="filter-btn" >Insights</button>
+                    </div>
                 </div>
             </div>
             <div class="row mb-30">
