--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -84,8 +84,18 @@
                     </div>
                 </div>
                 <div class="grid-item image">
-                    <img class="img-responsive" src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/18893090_1129639927142253_8618964973264668114_n.jpg?oh=0b39f3bb2b98b6feef6a3ac3f70e8925&oe=59EE81D9" />
 
+                    <div class="item-container">
+                        <img class="img-responsive" src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/18893090_1129639927142253_8618964973264668114_n.jpg?oh=0b39f3bb2b98b6feef6a3ac3f70e8925&oe=59EE81D9" />
+                        <div class="overlay-small">
+                            <div class="text">
+                                <div class="author-img-container">
+                                    <img src="{{picture}}" height="25" class="img-circle"/>
+                                </div>
+                                <p>Yong Lin Wang</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="grid-item image blog-item">
                     <img class="img-responsive" src="img/test.jpg" />
