Improve Editor Flow
Added back button and improved preview mode

--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -105,6 +105,7 @@
                             <a href="https://google.ca" class="link-sm">Yonglin Wang</a>
                         </p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore ea id iure neque omnis quaerat sequi, tenetur! Assumenda consectetur cumque dolore error, ex facere illum modi possimus quia similique.</p>
+                        <a href="" class="btn btn-primary btn-wide">Read More</a>
                     </div>
                 </div>
                 <div class="grid-item image">
