--- a/mobile/imports/ui/pages/marks.html
+++ b/mobile/imports/ui/pages/marks.html
@@ -1,8 +1,8 @@
 <template name="marks">
     <!-- Navigation -->
     {{> botnav}}
-    <div class="marks-container">
-        <div class="marks-card-wrapper">
+    <div class="marks-container" >
+        <div class="marks-card-wrapper" id="marksDetail">
             <div class="marks-card marks-radius marks-shadowDepth1">
                 <div class="marks-card-content marks-card-padding">
                     <article class="marks-card-article">
