categories and course page improv

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -3,7 +3,7 @@
     <div class="main post-body mb-60">
         <div class="container-fluid center-wrapper course-header" style="background-image: url('img/test.jpg')">
             <div class="sections-container">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 mb-30">
                     <div class="section-card">
                         <canvas id="knowledgeChart" width="400" height="400"></canvas>
                         <h3>Knowledge</h3>
@@ -27,10 +27,16 @@
                         <h3>Application</h3>
                     </div>
                 </div>
+                <div class="col-md-12 col-sm-12">
+                    <div class="section-card">
+                        <h2 class="performance-mark">30%</h2>
+                        <h3 class="mt-0">Culminating</h3>
+                    </div>
+                </div>
             </div>
             <div class="navbar-fixed-bottom text-center text-capitalize scroll-down">
                 <p>Scroll Down</p>
-                <i class="fa fa-arrow-down fa-3x"></i>
+                <div class="breathing"></div>
             </div>
         </div>
         <div class="container">
