--- a/mobile/imports/ui/pages/marksDetail.html
+++ b/mobile/imports/ui/pages/marksDetail.html
@@ -39,32 +39,63 @@
                         </div>
                     </div>
                     <div class="swiper-slide" id="marksDetail-swiper-slide">
-                        <div class="marksDetail-card radius shadowDepth1">
-                            <div class="card__content card__padding">
-                                <h3 class="marksDetail-main-title">Assessment 001</h3>
-                                <h5 class="marksDetail-sub-knowledge">Knowledge</h5>
-                                <div class="marksDetail-smaller-progress-wrapper">
-                                    <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
-                                    <div class="marksDetail-knowledge-progress-bar marks-radius" style="width: 90%">&nbsp;</div>
-                                    <h5 class="marksDetail-progress-bar-label">9/10</h5>
+                        <div class="marksDetail-down-scroll">
+                            <div class="marksDetail-card radius shadowDepth1">
+                                <div class="card__content card__padding">
+                                    <h3 class="marksDetail-main-title">Assessment 001</h3>
+                                    <h5 class="marksDetail-sub-knowledge">Knowledge</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-knowledge-progress-bar marks-radius" style="width: 90%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">9/10</h5>
+                                    </div>
+                                    <h5 class="marksDetail-sub-application">Application</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-application-progress-bar marks-radius" style="width: 60%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">6/10</h5>
+                                    </div>
+                                    <h5 class="marksDetail-sub-communication">Communication</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-communication-progress-bar marks-radius" style="width: 80%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">8/10</h5>
+                                    </div>
+                                    <h5 class="marksDetail-sub-thinking">Thinking</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-thinking-progress-bar marks-radius" style="width: 100%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">10/10</h5>
+                                    </div>
                                 </div>
-                                <h5 class="marksDetail-sub-application">Application</h5>
-                                <div class="marksDetail-smaller-progress-wrapper">
-                                    <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
-                                    <div class="marksDetail-application-progress-bar marks-radius" style="width: 60%">&nbsp;</div>
-                                    <h5 class="marksDetail-progress-bar-label">6/10</h5>
-                                </div>
-                                <h5 class="marksDetail-sub-communication">Communication</h5>
-                                <div class="marksDetail-smaller-progress-wrapper">
-                                    <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
-                                    <div class="marksDetail-communication-progress-bar marks-radius" style="width: 80%">&nbsp;</div>
-                                    <h5 class="marksDetail-progress-bar-label">8/10</h5>
-                                </div>
-                                <h5 class="marksDetail-sub-thinking">Thinking</h5>
-                                <div class="marksDetail-smaller-progress-wrapper">
-                                    <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
-                                    <div class="marksDetail-thinking-progress-bar marks-radius" style="width: 100%">&nbsp;</div>
-                                    <h5 class="marksDetail-progress-bar-label">10/10</h5>
+                            </div>
+                            <div class="marksDetail-card radius shadowDepth1">
+                                <div class="card__content card__padding">
+                                    <h3 class="marksDetail-main-title">Assessment 001</h3>
+                                    <h5 class="marksDetail-sub-knowledge">Knowledge</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-knowledge-progress-bar marks-radius" style="width: 90%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">9/10</h5>
+                                    </div>
+                                    <h5 class="marksDetail-sub-application">Application</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-application-progress-bar marks-radius" style="width: 60%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">6/10</h5>
+                                    </div>
+                                    <h5 class="marksDetail-sub-communication">Communication</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-communication-progress-bar marks-radius" style="width: 80%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">8/10</h5>
+                                    </div>
+                                    <h5 class="marksDetail-sub-thinking">Thinking</h5>
+                                    <div class="marksDetail-smaller-progress-wrapper">
+                                        <div class="marksDetail-progress-bar-back marks-radius">&nbsp;</div>
+                                        <div class="marksDetail-thinking-progress-bar marks-radius" style="width: 100%">&nbsp;</div>
+                                        <h5 class="marksDetail-progress-bar-label">10/10</h5>
+                                    </div>
                                 </div>
                             </div>
                         </div>
