--- a/production/imports/ui/pages/firstTime.html
+++ b/production/imports/ui/pages/firstTime.html
@@ -61,7 +61,8 @@
                                         <label for="introSubEmail">The email that we will be sending news letters to</label>
                                         <input type="email" value="123456789@gapps.yrdsb.ca" id="introSubEmail">
                                         <div class="form-group">
-                                            <label><input type="checkbox" id="introConsent"> I have read and agreed with the Terms of Service</label>
+                                            <input type='checkbox' class='ios8-switch' id='checkboxTerms'>
+                                            <label for='checkboxTerms'>I have read and agreed with the Terms of Service</label>
                                         </div>
                                         <input type="submit" class="btn btn-lg btn-login" value="Confirm">
                                     </form>
@@ -72,7 +73,7 @@
                     </div>
                     <div class="final-message" hidden>
                         <h1>Thank You!</h1>
-                        <h2>We are now redirecting you back to uhs.life!</h2>
+                        <h2>We are now redirecting you back to your stream!</h2>
                     </div>
                 </div>
             </div>
