Added a lot of front end stuff

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -1,5 +1,5 @@
 <template name="course">
-    {{> navigation title="TEJ4M1 | Grade 12 Computer Engineering" oper="true"}}
+    {{> navigation title="TEJ4M1 | Grade 12 Computer Engineering ,::, You Received: 90%" oper="true"}}
     <div class="main post-body mb-60">
         <div class="container-fluid center-wrapper course-header" style="background-image: url('img/test.jpg')">
             <div class="sections-container">
@@ -36,7 +36,7 @@
             </div>
             <div class="navbar-fixed-bottom text-center text-capitalize scroll-down">
                 <p>Scroll Down</p>
-                <div class="breathing"></div>
+                <div class="bounce arrow"></div>
             </div>
         </div>
         <div class="container">
