--- a/production/imports/ui/pages/details.html
+++ b/production/imports/ui/pages/details.html
@@ -7,7 +7,7 @@
             </div>
             <div class="navbar-fixed-bottom text-center text-capitalize scroll-down">
                 <p>Scroll Down</p>
-                <i class="fa fa-arrow-down fa-3x"></i>
+                <div class="bounce arrow"></div>
             </div>
         </div>
         <div class="container mb-30">
