upgraded nav bar

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -1,5 +1,5 @@
 <template name="course">
-    {{> navigation title="TEJ4M1 | Grade 12 Computer Engineering ,::, You Received: 90%" oper="true"}}
+    {{> navigation oper="true"}}
     <div class="main post-body mb-60">
         <div class="container-fluid center-wrapper course-header" style="background-image: url('img/test.jpg')">
             <div class="sections-container">
