--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -1,5 +1,5 @@
 <template name="stream">
-    {{> navigation title="Your Stream"}}
+    {{> navigation}}
     {{> editor}}
     <div class="container main">
         <div class="col-lg-12 content">
